[package]
name = "rice_servery"
version = "0.1.0"
authors = ["Brett Patterson <brett.patterson@rice.edu>"]

[[bin]]
doc = false
name = "rice_servery"

[dependencies]
serde = "0.9.8"
serde_json = "0.9.8"
serde_derive = "0.9.8"
hyper = "0.10.4"
html5ever = "0.13.0"
lettre = "0.6.2"
regex = "0.2.1"
iron = "0.5.1"
router = "0.5.1"
